hphp/test/slow/class-ptr/enum-reject.php.expectf

Fatal error: Invalid base type for enum E in %s/class-ptr/enum-reject.php on line 4
